--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Sitio Devops</title>
 </head>
 <body>
-  
+  <h1>Prueba ramas</h1>
+  <p>Prueba realizada en clase de git</p>
 </body>
 </html>
