--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
 <body>
   <h1>Estoy en la rama nuevas funciones</h1>
   <p>BootCamp Devops</p>
+  <nav>
+    <p>este es el navbar</p>
+  </nav>
 </body>
 </html>
