se añade nuevo parrafo desde colaborador rvasquezf

--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 <body>
   <h1>Estoy en la rama nuevas funciones</h1>
   <p>BootCamp Devops</p>
+
+  <p>Se crea nuevo parrafo rvasquezf</p>
 </body>
 </html>
